fixed horijontal  overflow

--- a/style/style.css
+++ b/style/style.css
@@ -93,16 +93,10 @@ body {
     z-index: -1;
 }
 
-.as-left-arrow {
-    left: -20px;
+.as-arrow {
     height: 40px;
     width: 40px;
-}
-
-.as-right-arrow {
-    right: -10px;
-    height: 40px;
-    width: 40px;
+    line-height: 10px;
 }
 
 
